--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <link rel = "stylesheet" href = "index-style.css" >
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class =  "master-div">
+        <div class = "screen-numpad-div">
+            <div class = "screen-div">
+                <p class = "screen-content">Hello</p>
+            </div>
+            <div class = "numpad-div">
+                <div class = "row-div">
+                    <button class="numpad-button">7</button>
+                    <button class="numpad-button">8</button>
+                    <button class="numpad-button">9</button>
+                    <button class="numpad-button">x</button>
+                </div>
+
+                <div class = "row-div">
+                    <button class="numpad-button">4</button>
+                    <button class="numpad-button">5</button>
+                    <button class="numpad-button">6</button>
+                    <button class="numpad-button">+</button>
+                </div>
+
+                <div class = "row-div">
+                    <button class="numpad-button">1</button>
+                    <button class="numpad-button">2</button>
+                    <button class="numpad-button">3</button>
+                    <button class="numpad-button">-</button>
+                </div>
+
+                <div class = "row-div">
+                    <button class="numpad-button">=</button>
+                    <button class="numpad-button">0</button>
+                    <button class="numpad-button">.</button>
+                    <button class="numpad-button">/</button>
+                </div>
+                
+            </div>
+        </div>
+        <div class = "clear-div">
+            <button class = "clear-button">Clear</button>
+        </div>
+    </div>
 </body>
 </html>
