Added functionality for basic use of the calc
The calculator is able to take a first operand
and operator and a second operand and solve it

--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             </div>
             <div class = "numpad-div">
                 <div class = "row-div">
-                    <button class="numpad-button">7</button>
-                    <button class="numpad-button">8</button>
-                    <button class="numpad-button">9</button>
-                    <button class="numpad-button">x</button>
+                    <button id = "number" class="numpad-button">7</button>
+                    <button id = "number" class="numpad-button">8</button>
+                    <button id = "number" class="numpad-button">9</button>
+                    <button id = "operator" class="numpad-button">x</button>
                 </div>
 
                 <div class = "row-div">
-                    <button class="numpad-button">4</button>
-                    <button class="numpad-button">5</button>
-                    <button class="numpad-button">6</button>
-                    <button class="numpad-button">+</button>
+                    <button id = "number" class="numpad-button">4</button>
+                    <button id = "number" class="numpad-button">5</button>
+                    <button id = "number" class="numpad-button">6</button>
+                    <button id = "operator" class="numpad-button">+</button>
                 </div>
 
                 <div class = "row-div">
-                    <button class="numpad-button">1</button>
-                    <button class="numpad-button">2</button>
-                    <button class="numpad-button">3</button>
-                    <button class="numpad-button">-</button>
+                    <button id = "number" class="numpad-button">1</button>
+                    <button id = "number" class="numpad-button">2</button>
+                    <button id = "number" class="numpad-button">3</button>
+                    <button id = "operator" class="numpad-button">-</button>
                 </div>
 
                 <div class = "row-div">
-                    <button class="numpad-button">=</button>
-                    <button class="numpad-button">0</button>
-                    <button class="numpad-button">.</button>
-                    <button class="numpad-button">/</button>
+                    <button id = "equals" class="numpad-button">=</button>
+                    <button id = "number" class="numpad-button">0</button>
+                    <button id = "decimal" class="numpad-button">.</button>
+                    <button id = "operator" class="numpad-button">/</button>
                 </div>
                 
             </div>
