--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class =  "master-div">
         <div class = "screen-numpad-div">
             <div class = "screen-div">
-                <p class = "screen-content">Hello</p>
+                <p class = "screen-content">0</p>
             </div>
             <div class = "numpad-div">
                 <div class = "row-div">
